added admin page, galary page, added css, js and java for new pages

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Art of Freedom</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
     <script src="js/common.js"></script>
     <script src="js/index.js"></script>
@@ -20,8 +20,8 @@
     <div class="hamburger-menu">
         <img src="images/hamburger.png" class="menu-icon" onclick="showMenu();">
         <ul id="menu_box">
-            <li><a class="menu_item" href="index.html">Home</a></li>
-            <li><a class="menu_item" href="buy.html">Buy art</a></li>
+            <li><a class="menu_item" href="/">Home</a></li>
+            <li><a class="menu_item" href="gallery">Virtual gallery</a></li>
             <li><a class="menu_item" href="artists.html">Meet our artists</a></li>
             <li><a class="menu_item" href="https://www.schack.org/" target="_blank">Schack art center</a></li>
             <li><a class="menu_item" href="https://www.paypal.com/donate/?hosted_button_id=8YWWNAY4EL6MC" target="_blank">Donate to Ukraine</a></li>
