added error page, separated nav menu, added database

--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -115,3 +115,9 @@ html, body{
     text-decoration: none;
     transition-duration: .25s;
 }
+
+#add-painting {
+      margin: auto;
+      width: 50%;
+      padding: 20px;
+}
