--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -14,7 +14,7 @@ html, body{
 .hero{
     width: 100%;
     min-height: 100%;
-    background-image: url(../images/Iryna\ Kalyuzhna\ Yellow\ flowers.2022\ oil\ on\ canvas\ 150x110\ cm\,\ $4900\ in\ Amsterdam\ \(1\).jpeg);
+    background-image: url(/images/Iryna\ Kalyuzhna\ Yellow\ flowers.2022\ oil\ on\ canvas\ 150x110\ cm\,\ $4900\ in\ Amsterdam\ \(1\).jpeg);
     background-position: center;
     background-size: cover;
     position: relative;
@@ -85,7 +85,7 @@ html, body{
 
 .menu-icon{
     position: fixed;
-    z-index: 1;
+    z-index: 101;
     top: 0;
     left: 0;
     width: 90px;
@@ -105,6 +105,7 @@ html, body{
     list-style: none;
     background-image: linear-gradient(rgba(78,0,225,0.75), rgba(7,0,60,0.85));
     transition-duration: .25s;
+    z-index: 100;
 }
 
 .menu_item {
@@ -116,8 +117,12 @@ html, body{
     transition-duration: .25s;
 }
 
-#add-painting {
+.container-center {
       margin: auto;
       width: 50%;
-      padding: 20px;
+      margin-top: 20px;
+}
+
+.admin-table-button {
+    margin: 5px;
 }
