--- a/src/main/resources/templates/gallery.html
+++ b/src/main/resources/templates/gallery.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Art of Freedom</title>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
     <script src="/js/common.js"></script>
@@ -14,22 +17,37 @@
 
 <div class="container">
     <div class="form">
-        <table>
-            <tr th:each="painting: ${paintings}">
-                <th><img th:src="@{${'/images/upload/' + painting.paintingImage}}" style="max-width: 200px; max-height: 200px;"></th>
-                <th th:text="${painting.paintingName}"></th>
-                <th th:text="${painting.artistName}"></th>
-                <th th:text="${painting.price}"></th>
-            </tr>
-        </table>
 
-        <form action="mailto:viktoriia.nikitiuk@gov.ua">
-            <select id="paintings" name="paintings">
-                <option value="Choose the painting">Choose the painting</option>
-            </select>
+        <div id="carouselExampleDark" class="carousel carousel-dark slide">
+            <div class="carousel-inner">
+                <div th:each="painting, p: ${paintings}" th:class="${p.index}!= 0  ? 'carousel-item':'carousel-item active'" data-bs-interval="10000">
+                    <img th:src="@{${'/images/upload/' + painting.paintingImage}}" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>First slide label</h5>
+                        <p>Some representative placeholder content for the first slide.</p>
+                    </div>
+                </div>
 
-            <input type="submit">
-        </form>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+
+
+<!--        <table>-->
+<!--            <tr th:each="painting: ${paintings}">-->
+<!--                <th><img th:src="@{${'images/upload/' + painting.paintingImage}}" style="max-width: 200px; max-height: 200px;"></th>-->
+<!--                <th th:text="${painting.paintingName}"></th>-->
+<!--                <th th:text="${painting.artistName}"></th>-->
+<!--                <th th:text="${painting.price}"></th>-->
+<!--            </tr>-->
+<!--        </table>-->
     </div>
 </div>
 
