--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -126,3 +126,11 @@ html, body{
 .admin-table-button {
     margin: 5px;
 }
+
+#painting-image {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    /*width: 60%;*/
+    max-height: 60%
+}
