--- a/src/main/resources/templates/gallery.html
+++ b/src/main/resources/templates/gallery.html
@@ -12,7 +12,7 @@
     <script src="/js/common.js"></script>
 </head>
 
-<body id="gallery">
+<body>
     <div th:replace="fragments/navMenu :: nav-bar"></div>
 
 <div class="container">
@@ -21,7 +21,7 @@
         <div id="carouselExampleDark" class="carousel carousel-dark slide">
             <div class="carousel-inner">
                 <div th:each="painting, p: ${paintings}" th:class="${p.index}!= 0  ? 'carousel-item':'carousel-item active'" data-bs-interval="10000">
-                    <img th:src="@{${'/images/upload/' + painting.paintingImage}}" class="d-block w-100" alt="...">
+                    <img th:src="@{${'/images/upload/' + painting.paintingImage}}" id="painting-image">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>First slide label</h5>
                         <p>Some representative placeholder content for the first slide.</p>
