--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -117,6 +117,10 @@ html, body{
     transition-duration: .25s;
 }
 
+.full-height {
+    height: 100%;
+}
+
 .container-center {
       margin: auto;
       width: 50%;
@@ -131,6 +135,13 @@ html, body{
     display: block;
     margin-left: auto;
     margin-right: auto;
-    /*width: 60%;*/
     max-height: 60%
+}
+
+.gallery .carousel-caption {
+    position: static;
+}
+
+.gallery .carousel {
+    height: 70%;
 }
