--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -145,3 +145,9 @@ html, body{
 .gallery .carousel {
     height: 70%;
 }
+
+.logout-button {
+    position: absolute;
+    top: 20px;
+    right: 50px;
+}
