--- a/src/main/resources/templates/fragments/navMenu.html
+++ b/src/main/resources/templates/fragments/navMenu.html
@@ -10,11 +10,11 @@
         <ul id="menu_box">
             <li><a class="menu_item" href="/">Home</a></li>
             <li><a class="menu_item" href="/gallery">Virtual gallery</a></li>
-            <li><a class="menu_item" href="/artists.html">Meet our artists</a></li>
             <li><a class="menu_item" href="https://www.schack.org/" target="_blank">Schack art center</a></li>
             <li><a class="menu_item" href="https://www.paypal.com/donate/?hosted_button_id=8YWWNAY4EL6MC" target="_blank">Donate to Ukraine</a></li>
-            <li><a class="menu_item" href="/contact.html">Contact us</a></li>
+<!--            <li><a class="menu_item" href="/contact.html">Contact us</a></li>-->
         </ul>
     </div>
+    <div th:fragment="logout-button"><a href="/logout" class="btn btn-info btn-sm logout-button">Logout</a></div>
 </body>
 </html>
