user, registration and buy

--- a/src/main/resources/templates/fragments/navMenu.html
+++ b/src/main/resources/templates/fragments/navMenu.html
@@ -9,6 +9,7 @@
         <img src="/images/hamburger.png" class="menu-icon" onclick="showMenu();">
         <ul id="menu_box">
             <li><a class="menu_item" href="/">Home</a></li>
+            <li><a class="menu_item" href="/login">Login</a></li>
             <li><a class="menu_item" href="/gallery">Virtual gallery</a></li>
             <li><a class="menu_item" href="https://www.schack.org/" target="_blank">Schack art center</a></li>
             <li><a class="menu_item" href="https://www.paypal.com/donate/?hosted_button_id=8YWWNAY4EL6MC" target="_blank">Donate to Ukraine</a></li>
